--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ask-mona/messenger-bot",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Messenger bot framework in NodeJS",
   "main": "lib/Client.js",
   "directories": {
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "request": "^2.85.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "socket.io": "^2.1.1"
   }
 }
