--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ask-mona/messenger-bot",
-  "version": "2.1.22",
+  "version": "2.2.0",
   "description": "Messenger bot framework in NodeJS",
   "main": "lib/Client.js",
   "directories": {
@@ -32,8 +32,10 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "dotenv": "^5.0.1",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-redis": "^5.2.0"
   }
 }
