--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "got": "^11.8.1",
+    "redis": "^3.0.2",
     "socket.io": "^3.0.5",
     "socket.io-redis": "^6.0.1"
   }
